--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,15 +32,15 @@ android {
     }
 }
 
-repositories {
-    maven {
-        url "https://jitpack.io"
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
     }
 }
 
 dependencies {
 
-    implementation 'sun.bob:mcalendarview:1.0.0'
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
